# ai_udemy_course

./: README
car/: .gitignore  Makefile  README  ai.py  car_app.py  map.py  map_commented.py  pyproject.toml
car/widgets/: __init__.py  car.py  game.py  paint.py
