[tool.poetry]
name = "car"
version = "0.1.0"
description = ""
authors = ["hench89 <58388701+hench89@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Kivy = "^2.1.0"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
